--- a/green-harvest-app/backend-2/package.json
+++ b/green-harvest-app/backend-2/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "mssql": "^11.0.1",
     "sequelize": "^6.37.6",
+    "sequelize-cli": "^6.6.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "tedious": "^18.6.1"
